Add factorial.c and add make clean command

--- a/runner/tests/Makefile
+++ b/runner/tests/Makefile
@@ -2,10 +2,15 @@ PREFIX := riscv64-elf-
 MAKEFLAGS += --no-builtin-rules
 .SUFFIXES:
 
+.PHONY: all clean
 all: $(patsubst %.c,%,$(wildcard *.c))
+
+clean:
+	rm -rf $(patsubst %.c,%,$(wildcard *.c))
 
 %.o: %.c
 	$(PREFIX)gcc $^ -o $@ -march=rv32im -mabi=ilp32 -fPIE -ffreestanding -nostdlib
 
 %: %.o
 	$(PREFIX)ld $^ -T linker.lds -o $@ -melf32lriscv
+
