Add lib.h for printf

--- a/runner/tests/Makefile
+++ b/runner/tests/Makefile
@@ -8,8 +8,8 @@ all: $(patsubst %.c,%,$(wildcard *.c))
 clean:
 	rm -rf $(patsubst %.c,%,$(wildcard *.c)) $(patsubst %.c,%.o,$(wildcard *.c))
 
-%.o: %.c
-	$(PREFIX)gcc $^ -o $@ -march=rv32im -mabi=ilp32 -fPIE -ffreestanding -nostdlib
+%.o: %.c lib.h
+	$(PREFIX)gcc $< -o $@ -march=rv32im -mabi=ilp32 -fPIE -ffreestanding -nostdlib
 
 %: %.o
 	$(PREFIX)ld $^ -T linker.lds -o $@ -melf32lriscv
