--- a/runner/tests/Makefile
+++ b/runner/tests/Makefile
@@ -9,7 +9,7 @@ clean:
 	rm -rf $(patsubst %.c,%,$(wildcard *.c)) $(patsubst %.c,%.o,$(wildcard *.c))
 
 %.o: %.c lib.h
-	$(PREFIX)gcc $< -o $@ -march=rv32im -mabi=ilp32 -fPIE -ffreestanding -nostdlib
+	$(PREFIX)gcc -c $< -o $@ -march=rv32im -mabi=ilp32 -ffreestanding -nostdlib
 
 %: %.o
 	$(PREFIX)ld $^ -T linker.lds -o $@ -melf32lriscv
